Removed configuration argLine values