@@ -203,12 +203,6 @@
             <version>${maven-surefire-plugin.version}</version>
             <configuration>
               <argLine>
-                --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
-                --add-exports com.azure.core/com.azure.core.implementation.serializer.jackson=ALL-UNNAMED
-                --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-                --add-opens com.azure.storage.blob/com.azure.storage.blob=ALL-UNNAMED
-                --add-opens com.azure.storage.blob/com.azure.storage.blob.implementation=ALL-UNNAMED
-                --add-opens com.azure.storage.blob/com.azure.storage.blob.specialized=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
